new command added

--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,5 @@
 	"clientId": "996428400497524736",
 	"guildId": "970639355607674931",
 	"token": "OTk2NDI4NDAwNDk3NTI0NzM2.G0dzF_.8NNvaZRuzFHXLED_zYfl24wNcIPmbhOlrX16TI",
-"memerkey": "lUAsvSXv0yr"
+"memerkey": "vJvxXTQNMpi"
 }
