--- a/config/config.json
+++ b/config/config.json
@@ -3,7 +3,7 @@
 "guildId": "970639355607674931",
 "token": "OTk2NDI4NDAwNDk3NTI0NzM2.Gjl10z.oPT9UxWmHD9otNsV0bp1mH-3fG87Z1WRf7QJHw",
 "memerkey": "vJvxXTQNMpi",
-"mongodb": "",
+"mongodb": "mongodb+srv://trollbot:j2VPsj3oCiO1xTit@cluster1.kltnn.mongodb.net/?retryWrites=true&w=majority",
 "activitystatus": "idk",
 "activitystatus2": "something",
 "developers": ["674145228063768587", "756508455837237358"]
