--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
-"clientId": "996428400497524736",
-"guildId": "970639355607674931",
-"token": "OTk2NDI4NDAwNDk3NTI0NzM2.G4MmBx.En0C1zlX5yhCKfig-4RELHq5w9Whq1s0fbGdD8",
+"clientId": "",
+"guildId": "",
+"token": "",
 "memerkey": "vJvxXTQNMpi",
-"activitystatus": "discord.js v14",
-"activitystatus2": "updating",
+"activitystatus": "TrollBot 1.1.0 Is Live Now | /updates",
+"activitystatus2": "Made By TrollBot Development",
 "developers": ["674145228063768587", "756508455837237358"]
 }
