--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
 "clientId": "",
 "guildId": "",
-"token": "",
+"token": "OTk2NDI4NDAwNDk3NTI0NzM2.GsJIIS.3-Yldhsny0LHMvbkQevYN7eQkOjXks9qs49Jkc",
 "memerkey": "vJvxXTQNMpi",
 "activitystatus": "TrollBot 1.1.0 Is Live Now | /updates",
 "activitystatus2": "Made By TrollBot Development",
