--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
-"clientId": "",
-"guildId": "",
-"token": "OTk2NDI4NDAwNDk3NTI0NzM2.GsJIIS.3-Yldhsny0LHMvbkQevYN7eQkOjXks9qs49Jkc",
+"clientId": "998593640614080553",
+"guildId": "946737400544124999",
+"token": "OTk4NTkzNjQwNjE0MDgwNTUz.GqJX3C.zaqFMRYPEWfuT1kzEpr6g0eCOM1bfp3QrRP2RM",
 "memerkey": "vJvxXTQNMpi",
 "activitystatus": "TrollBot 1.1.0 Is Live Now | /updates",
 "activitystatus2": "Made By TrollBot Development",
-"developers": ["674145228063768587", "756508455837237358"]
+"developers": "674145228063768587"
 }
