--- a/config/config.json
+++ b/config/config.json
@@ -1,9 +1,9 @@
 {
-"clientId": "996428400497524736",
-"guildId": "970639355607674931",
-"token": "OTk2NDI4NDAwNDk3NTI0NzM2.GCWMD-.63viTVyCZ-yws3bYVBVfBnPThSa0cyczxd-47k",
+"clientId": "998593640614080553",
+"guildId": "946737400544124999",
+"token": "",
 "memerkey": "vJvxXTQNMpi",
-"activitystatus": "TrollBot 1.1.0 Is Live Now | /updates",
+"activitystatus": "trollbot.ml",
 "activitystatus2": "Made By TrollBot Development",
 "developers": "674145228063768587"
 }
