Added /buy Command And Added Net Worth In /balance

--- a/config/config.json
+++ b/config/config.json
@@ -5,5 +5,5 @@
 "memerkey": "vJvxXTQNMpi",
 "activitystatus": "trollbot.ml",
 "activitystatus2": "Made By TrollBot Development",
-"developers": "674145228063768587"
+"developers": ["674145228063768587", "756508455837237358"]
 }
