antiCrash Added, Store And Buy Completed

--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
 "clientId": "996428400497524736",
 "guildId": "970639355607674931",
-"token": "OTk2NDI4NDAwNDk3NTI0NzM2.G7GcCJ.nZ_95MGc4bg8IU-qu7I90YcDG2a08UDfqHpZ2M",
+"token": "OTk2NDI4NDAwNDk3NTI0NzM2.G1Y-kn.WhYxtaFEf2EVbGjAEwLrl-AZHkINn209zzjE1s",
 "memerkey": "vJvxXTQNMpi",
 "activitystatus": "trollbot.ml",
 "activitystatus2": "Made By TrollBot Development",
