Some changes and /settings-bio still not fixed :(

--- a/config/settings.json
+++ b/config/settings.json
@@ -3,6 +3,6 @@
   "maintenance": "false",
   "presence": "trollbot.ml",
   "presence2": "under development",
-  "owner": "674145228063768587",
-  "admins": ["756508455837237358"]
+  "owner": "",
+  "admins": ["756508455837237358", "674145228063768587"]
 }
