--- a/config/settings.json
+++ b/config/settings.json
@@ -1,6 +1,6 @@
 {
   "antiCrash": false,
-  "maintenance": "true",
+  "maintenance": "false",
   "presence": "trollbot.ml",
   "presence2": "under development",
   "owner": "",
