Ready to deploy 🚀

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,8 @@
 {
   "antiCrash": false,
-  "maintenance": "false",
+  "maintenance": "true",
   "presence": "trollbot.ml",
-  "presence2": "under development",
+  "presence2": "under testing",
   "owner": "",
   "admins": ["756508455837237358", "674145228063768587"],
   "nonDeffer_cmd": ["settings-bio"]
