--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
-"clientId": "996428400497524736",
-"guildId": "970639355607674931",
-"token": "OTk2NDI4NDAwNDk3NTI0NzM2.Ge1ZQT.SIkMdBtyap22Nc7oX7AniTJTqF3JHy4n8CdIzo",
+"clientId": "998593640614080553",
+"guildId": "946737400544124999",
+"token": "",
 "memerkey": "vJvxXTQNMpi",
-  "MongoURI": "mongodb+srv://trollbot:trollbot2635361@cluster0.1vltbiw.mongodb.net/?retryWrites=true&w=majority"
+  "MongoURI": "mongodb+srv://trollbot:trollbot2635361@main.kkeeit5.mongodb.net/?retryWrites=true&w=majority"
 }
