Fixed antiCrash Ram Usage

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,5 +1,5 @@
 {
-  "antiCrash": false,
+  "antiCrash": true,
   "maintenance": "false",
   "presence": "trollbot.ml",
   "presence2": "under testing",
