--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,5 @@
 "guildId": "970639355607674931",
 "token": "OTk2NDI4NDAwNDk3NTI0NzM2.Gh1ZSx.wf_ePsENoktJpspYJo-OCC9hE3Wef2oGTqtilE",
 "memerkey": "vJvxXTQNMpi",
-  "MongoURI": "mongodb+srv://trollbot-testing:SeqWYGQxt1PDwK0s@testing.j6owqkg.mongodb.net/?retryWrites=true&w=majority"
+  "MongoURI": "mongodb+srv://trollbot-testing:SeqWYGQxt1PDwK0s@cluster0.syrwpjr.mongodb.net/?retryWrites=true&w=majority"
 }
