--- a/config/config.json
+++ b/config/config.json
@@ -3,5 +3,5 @@
 "guildId": "1038019461296431134",
 "token": "OTk2NDI4NDAwNDk3NTI0NzM2.G8UX4g.nMySZgPtuTeiJuWBBQgP1I08LWbz94pGrJaupU",
 "memerkey": "vJvxXTQNMpi",
-  "MongoURI": "mongodb+srv://trollbot_test:trollbot8764@cluster0.iq7czsu.mongodb.net/?retryWrites=true&w=majority"
+  "MongoURI": "mongodb+srv://trollbot_test:vtzaJkIpENUxnvW1@cluster0.nkpirsj.mongodb.net/?retryWrites=true&w=majority"
 }
