--- a/config/settings.json
+++ b/config/settings.json
@@ -1,8 +1,8 @@
 {
-  "antiCrash": true,
+  "antiCrash": false,
   "maintenance": "true",
-  "presence": "trollbot.ml",
-  "presence2": "Made By TrollBot Development",
+  "presence": "TrollBot Beta",
+  "presence2": "🎉 community.trollbot.ml",
   "owner": "674145228063768587",
   "admins": ["756508455837237358", "674145228063768587"],
   "nonDeffer_cmd": ["settings-bio"]
