--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nodejs",
-  "version": "1.0.0",
+  "name": "TrollBot",
+  "version": "2.2.2",
   "description": "",
   "main": "index.js",
   "scripts": {
