--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "common-tags": "^1.8.2",
+    "@top-gg/sdk": "^3.1.3",
     "cpu-stat": "^2.0.1",
     "discord.js": "^14.7.1",
-    "memer-api": "^4.0.2",
+    "express": "^4.18.2",
     "ms": "^2.1.3",
     "node-fetch": "^3.3.0",
     "quick.db": "^9.0.8",
