--- a/config/config-example.json
+++ b/config/config-example.json
@@ -12,7 +12,7 @@
 "globalCommands": false,
 "presence": "",
 "presence2": "",
-"votingApi": true,
+"votingApi": false,
 "owner": "674145228063768587",
 "admins": ["756508455837237358", "674145228063768587"],
 "nonDeffer_cmd": ["bio"]
